<resources>
    <string name="app_name">Exams</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng kí</string>
    <string name="unknown_error">Lỗi không xác định</string>
    <string name="missing_username">Tên đăng nhập không được để trống</string>
    <string name="invalid_username_length">Tên đăng nhập phải có độ dài từ 5 đến 32 kí tự</string>
    <string name="missing_password">Mật khẩu không được để trống</string>
    <string name="invalid_password_length">Mật khẩu phải có độ dài từ 5 đến 32 kí tự</string>
    <string name="name">Họ và tên</string>
    <string name="birth">Ngày sinh</string>
    <string name="address">Địa chỉ</string>
    <string name="tel">Số điện thoại</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="policy">Đồng ý với điều khoản, mặc dù chúng tôi không có điều khoản nào cả.</string>
    <string name="register_success">Đăng kí thành công</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="invalid_cf_password">Mật khẩu xác nhận chưa đúng</string>
    <string name="invalid_birth_format">Định dạng ngày sinh chưa đúng</string>
    <string name="missing_user_name">Họ và tên không được để trống</string>
    <string name="invalid_user_name_length">Họ và tên phải có độ dài lớn hơn hoặc bằng 5 kí tự</string>
    <string name="missing_birth">Ngày sinh không được để trống</string>
    <string name="missing_tel">Số điện thoại không được để trống</string>
    <string name="exist_username">Tên đăng nhập đã tồn tại</string>
    <string name="wrong_username_password">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="home">Trang chủ</string>
    <string name="bank">Ngân hàng câu hỏi</string>
    <string name="more">Khác</string>
    <string name="search">Tìm kiếm</string>
    <string name="_public">Công khai</string>
    <string name="personal">Cá nhân</string>
    <string name="updated_at_bank">Cập nhật lần cuối ngày %1$s bởi %2$s</string>
    <string name="updated_at_question">Cập nhật lần cuối ngày %1$s</string>
    <string name="sample_content_description">Sample content description</string>
    <string name="sample_text">Duis non risus varius, vestibulum magna at, tempor eros. Curabitur.</string>
    <string name="new_bank">Thêm ngân hàng mới</string>
    <string name="bank_name">Tên ngân hàng câu hỏi</string>
    <string name="description">Mô tả</string>
    <string name="_private">Bí mật</string>
    <string name="private_bank_des">Chỉ mình bạn có thể xem, sửa, xóa, sử dụng ngân hàng câu hỏi này.</string>
    <string name="public_bank_des">Mọi người có thể xem và sử dụng ngân hàng của bạn cho các đề thi của họ, nhưng họ không có quyền sửa hoặc xóa ngân hàng câu hỏi này.</string>
    <string name="add_new">Thêm mới</string>
    <string name="update_bank">Cập nhật ngân hàng</string>
    <string name="update">Cập nhật</string>
    <string name="add_new_success">Thêm mới thành công</string>
    <string name="missing_bank_name">Tên ngân hàng không được để trống</string>
    <string name="invalid_bank_name_length">Tên ngân hàng phải có độ dài lớn hơn hoặc bằng 5 kí tự</string>
    <string name="new_question">Thêm câu hỏi mới</string>
    <string name="question_content">Nội dung câu hỏi</string>
    <string name="explanation">Giải thích câu trả lời</string>
    <string name="answer_content">Nội dung câu trả lời</string>
    <string name="answer_quantity">Số lượng câu trả lời</string>
    <string name="generate">Tạo</string>
    <string name="add_answer">Thêm câu trả lời</string>
    <string name="answer_list">Danh sách câu trả lời:</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="update_question">Cập nhật câu hỏi</string>
    <string name="new_contest">Thêm bài kiểm tra mới</string>
    <string name="contest_name">Tên bài kiểm tra</string>
    <string name="question_quantity">Số lượng câu hỏi</string>
    <string name="start_at">Bắt đầu lúc</string>
    <string name="end_at">Kết thúc lúc</string>
    <string name="private_contest_des">Những người muốn tham gia cần nhập chính xác mã bài kiểm tra và mật khẩu để có thể tham gia.</string>
    <string name="public_contest_des">Mọi người đều có thể nhìn thấy và tìm kiếm bài kiểm tra của bạn, tuy nhiên, để tham gia họ vẫn cần mật khẩu do bạn cung cấp.</string>
    <string name="question_quantity_template">Số lượng câu hỏi: %1$d</string>
    <string name="invalid_start_format">Định dạng ngày bắt đầu chưa đúng</string>
    <string name="invalid_end_format">Định dạng ngày kết thúc chưa đúng</string>
    <string name="invalid_end_before_start">Ngày bắt đầu không được lớn hơn ngày kết thúc</string>
    <string name="add_contest_success">Mã tham gia của bài kiểm tra đã được sao chép vào bộ nhớ tạm.</string>
    <string name="logout">Đăng xuất</string>
    <string name="test_now">Làm bài ngay</string>
    <string name="prepare_test">Chuẩn bị làm bài</string>
    <string name="code">Mã bài kiểm tra</string>
    <string name="submit">Nộp bài</string>
    <string name="question_template">Câu hỏi số %1$d: %2$s</string>
    <string name="report">Kết quả</string>
    <string name="re_test">Làm bài kiểm tra khác</string>
    <string name="score_template">Điểm số: %1$d/%2$d</string>
    <string name="test_time_template">Thời gian làm bài: %1$d giờ %2$d phút %3$d giây.</string>
</resources>