<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.cn.exams.ui.bank.edit.BankEditContract.Presenter" />

        <variable
            name="name"
            type="String" />

        <variable
            name="description"
            type="String" />

        <variable
            name="isPublic"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/new_bank" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/between_element_quadruple">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bank_name"

                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="textCapSentences"
                            android:text="@={name}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/between_element"
                        android:hint="@string/description"

                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="textMultiLine"
                            android:text="@={description}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sw_personal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/between_element"
                        android:checked="@={isPublic}"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="@dimen/between_element"
                        android:onCheckedChanged="@{(btn, isChecked) -> presenter.personalChange(isChecked)}"
                        android:text="@string/_private"
                        android:textSize="@dimen/font_size_medium"

                        app:layout_constraintTop_toBottomOf="@id/tb_layout" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/private_bank_des"
                        android:textColor="@color/secondary_text_on_white"
                        android:textStyle="italic"
                        android:visibility="@{isPublic ? 8 : 0}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/public_bank_des"
                        android:textColor="@color/secondary_text_on_white"
                        android:textStyle="italic"
                        android:visibility="@{isPublic ? 0 : 8}" />

                    <Button
                        android:id="@+id/btn_action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/between_element_quadruple"
                        android:onClick="@{() -> presenter.action(name, description, isPublic)}"
                        android:text="@string/add_new" />
                </LinearLayout>
            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>