<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.cn.exams.ui.intest.report.ReportContract.Presenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"

                app:navigationIcon="@drawable/ic_back"
                app:title="@string/report" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/between_element_quadruple"
            android:paddingVertical="@dimen/between_element_double">

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                android:textColor="@color/primary_text_on_white"
                android:textSize="@dimen/font_size_bigger" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/between_element"
                android:text="@string/sample_text"
                android:textColor="@color/primary_text_on_white"
                android:textSize="@dimen/font_size_bigger" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/between_element_quadruple"
                android:onClick="@{() -> presenter.back()}"
                android:text="@string/re_test" />
        </LinearLayout>
    </LinearLayout>
</layout>