<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.cn.exams.ui.bank.bankoverview.BankOverviewContract.Presenter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/tb_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/between_element_double"
            android:paddingVertical="@dimen/between_element"

            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_search_bar"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:minHeight="@dimen/min_clickable_height"
                    android:onTextChanged="@{(s, i1, i2, i3) -> presenter.search(s.toString())}" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sw_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/between_element_double"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/between_element"
            android:onCheckedChanged="@{(btn, isPublic) -> presenter.personalChange(isPublic)}"
            android:text="@string/personal"
            android:textSize="@dimen/font_size_medium"

            app:layout_constraintTop_toBottomOf="@id/tb_layout" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swp"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_personal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/between_element_double"
            android:contentDescription="@string/sample_content_description"
            android:onClick="@{() -> presenter.addBank()}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>